style.css
body {background-color:tan;
     }

/*The Welcome Modal Background*/
.welcomeModal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: black;
    background-color: rgba(0,0,0,0.4);
}

/*Welcome Modal Content Box*/
.welcomeModalContent {
    background-color: tan;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 40%;
    height: 40%

}

.welcomeClose {
    color: #ff0000;
    float: right;
    font-size: 60px;
    font-weight: bold;
}

/*The HowToPlay Modal Background*/
.howToPlayModal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: black;
    background-color: rgba(0,0,0,0.4);
}

/*HowToPlay Modal Content Box*/
.howToPlayModalContent {
    background-color: tan;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 40%;

}

/*The HTP Modal Close Button*/
.howToPlayClose {
    color: #ff0000;
    float: right;
    font-size: 60px;
    font-weight: bold;
}


.howToPlayClose:focus {
    color: black;
    text-decoration: none;
    cursor:pointer;
}


h1  {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 300%;
    color:darkgoldenrod;
    font-weight: bold;
    text-transform: uppercase;
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
}

h2  {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 100%;
    color:darkgoldenrod;
    font-weight: bold;
    text-transform: uppercase;
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
}

h3  {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 150%;
    color:darkgoldenrod;
    font-weight: bold;
    text-transform: uppercase;
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
}


.grid  {
    max-width: 80%;
    margin: 0 auto;
    text-align: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    margin-bottom: 2%;
    
}


.row    {
    display: flex;
    margin: auto;
    gap: 2px;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    flex-wrap: wrap;
    justify-content: space-between;
    max-width: 960px;
    width: 80%;
}

.column {
    background-color:peru;
    padding: 1rem 0;
    flex: 1;
    gap: 2px;
    align-content: center;
    border: 1px solid #333;
    display: flex;
    flex-basis: 1;
    font-size: 3em;
    justify-content: center;
    
}

.column:hover {
    background-color:sandybrown;
}

button {background-color: peru;
}

.row  {
        flex-wrap: nowrap;
}

p   {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 300%;
     color: darkgoldenrod;

    }

p2  {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
        font-size: 150%;
        color:darkgoldenrod;
        font-weight: bold;
        text-transform: uppercase;
        padding-left: 5%;
        padding-right: 5%;
        text-align: center;
    }

div {
    border-width: 3px;
    border-color: black;
    font-size: 70%
    }

#mainContainer  {width: 100%;
            text-align: center;
            margin: auto;
        }

#title  {background-color:bisque;
         text-align: center;
         margin: auto;
         max-width: 48%;
        }

#turnCounter    {background-color:bisque;
    text-align: center;
    margin: auto;
    max-width: 20%;
    font-size: large;
    }

#itemList   {background-color:bisque;
    text-align: center;
    margin: auto;
    max-width: 48%;
    }

#credit {background-color:bisque;
        width: 40%;
        text-align: center; 
        margin: auto;
        }   

